[gd_scene load_steps=10 format=3 uid="uid://doajkk8ug4dbw"]

[ext_resource type="PackedScene" uid="uid://bu0kgflo8twva" path="res://player.tscn" id="1_loaxy"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_xixw3"]
[ext_resource type="PackedScene" uid="uid://y3nahnpvgjnd" path="res://mob.tscn" id="2_5ldnl"]
[ext_resource type="PackedScene" uid="uid://cbkepkox0vyst" path="res://ui.tscn" id="4_gm8au"]

[sub_resource type="BoxShape3D" id="BoxShape3D_twklf"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_ianbh"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q4qhk"]
albedo_color = Color(0.988235, 0.647059, 0.376471, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7kfdd"]
material = SubResource("StandardMaterial3D_q4qhk")

[sub_resource type="Curve3D" id="Curve3D_fx86a"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -10.9522, 0, -10.84, 0, 0, 0, 0, 0, 0, 11.1769, 0, -10.9435, 0, 0, 0, 0, 0, 0, 16.9677, 0, 11.0823, 0, 0, 0, 0, 0, 0, -15.9158, 0, 12.1164, 0, 0, 0, 0, 0, 0, -10.9522, 0, -10.84),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_xixw3")
mob_scene = ExtResource("2_5ldnl")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_twklf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ianbh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 2, 1, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_loaxy")]
collision_mask = 6

[node name="CameraPivot" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1, 8.44439e-08, -2.26267e-08, 0, 0.258819, 0.965926, 8.74228e-08, 0.965926, -0.258819, 0, 12, -5)

[node name="PlaceHolders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlaceHolders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 12)
mesh = SubResource("CylinderMesh_7kfdd")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="PlaceHolders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 11)
mesh = SubResource("CylinderMesh_7kfdd")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="PlaceHolders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, -11)
mesh = SubResource("CylinderMesh_7kfdd")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="PlaceHolders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, -11)
mesh = SubResource("CylinderMesh_7kfdd")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_fx86a")

[node name="SpawnLocations" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00467688, 0, -0.999989, 0, 1, 0, 0.999989, 0, 0.00467688, -10.9522, 0, -10.84)

[node name="MobTimer" type="Timer" parent="."]

[node name="UI" parent="." instance=ExtResource("4_gm8au")]

[connection signal="die" from="Player" to="." method="_on_player_die"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="retry_game" from="UI" to="." method="_on_ui_retry_game"]
